# ProjectTeleprinter

./: .dockerignore  .env.example  .gitignore  =0.19.0  CONTRIBUTING.md  DOCKER.md  Dockerfile  LICENSE  QUICKSTART.md  README.md  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
scripts/: setup.bat  setup.sh  verify_mesh.py
scripts/sim_configs/: NEIGHBORS.md  node_a.json  node_b.json  node_c.json
src/telex/: __init__.py  main.py
src/telex/adapters/: __init__.py  database.py  network.py
src/telex/core/: __init__.py  dao.py  database.py  garbage_collector.py  messages.py  models.py
src/telex/hardware/: __init__.py  interface.py
src/telex/network/: __init__.py
src/telex/queue/: __init__.py
src/telex/routing/: __init__.py
src/telex/utils/: __init__.py  config.py
tests/: __init__.py  conftest.py
tests/integration/: test_dedup_db.py  test_queue_integration.py
tests/unit/: test_config.py  test_dao.py  test_database.py  test_garbage_collector.py  test_hardware.py  test_models.py  test_protocol.py
